--- a/style.css
+++ b/style.css
@@ -42,68 +42,7 @@ body
     background-color: rgba(0, 0, 0,0.3);
     z-index: 444;
 } 
-/* .container
-{
-    width: 80%;
-    padding-right: 10px;
-    padding-left: 10px;
-    margin-right:  auto;
-    margin-left:  auto; 
-    position: relative;
-}
-@media (min-width:768px)
-{
-    .container
-    {
-        width: 750px;
-        
-    }
-}
-@media (min-width:992px)
-{
-    .container
-    {
-        width: 970px;
-    }
-}
-@media (min-width:1200px)
-{
-    .container
-    {
-        width: 1170px;
-    }
-} */
-/* .nav-item
-{
-    display: flex;
-    justify-content: flex-end;
-} */
 
-/* .header
-{
-   padding-top: 20px;
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   position: relative;
-   z-index: 2px;
-   width: 100%;
-}
-.header .nav svg
-{
-    color: #fff;
-    font-size: 20px;
-    cursor: pointer;
-}
-
-@media  (min-width:768px)
-{
-    .header .nav svg
-    {
-        display: none;
-    }
-
-} */
 .logo
 {
     color: #fff;
@@ -120,92 +59,7 @@ body
 {
    color: #797878;
 }
-/*
-ul li
-{
-    display: inline-block;
-    margin-left: 8px;
-} */
-/* @media (max-width:768px)
-{
-    ul 
-    {
-        display: none;
-    } 
-    .header .nav svg:hover + ul
-    {
-        display: flex;
-        flex-direction: column;
-        position: absolute;
-        top: 100%;
-        width: 100%;
-        right: 12px;
-        background-color: #83717142;
-        z-index: 232;
-    }  
-    .header .nav svg:hover + ul li a
-    {
-        color: #f6f2f2;
-        width: 100%;
-    }
-    ul li a
-    {
-        color: #797878;
-    }
-} */
-/* .header .nav svg:hover ul 
-{
-    display: block;
-} */
-/* ul li a
-{
-    display: block;
-    color: #fff;
-    text-transform: capitalize;
-    font-size:18px ;
-    padding: 6px;
-    transition: .3s;
-    position: relative;
-    -webkit-transition: .3s;
-    -moz-transition: .3s;
-    -ms-transition: .3s;
-    -o-transition: .3s;
-} */
-/* ul li a:hover
-{
-    background-color: rgba(63, 195, 195, 0.329);
-    color: #000;
-    padding: 6px;
-    border-radius: 4px ;
-    -webkit-border-radius:;
-    -moz-border-radius:;
-    -ms-border-radius:;
-    -o-border-radius:;
-} */
-/* ul li a.active
-{
-    background-color: rgba(63, 195, 195, 0.329);
-    color: #000;
-    border: 1px solid #fff;
-    padding: 6px;
-    border-radius: 4px;
-    -webkit-border-radius:;
-    -moz-border-radius:;
-    -ms-border-radius:;
-    -o-border-radius:;
-} */
-/* @media (min-width:922px)
-{
-    ul li{
-        margin-left: 15px;
-    }
-}
-@media (min-width:1200px)
-{
-    ul li{
-        margin-left: 20px;
-    }
-} */
+
 .navbar
 {
     position: fixed;
@@ -229,27 +83,34 @@ ul li
 {
     position: absolute;
     padding-top: 12%;
+    margin: 0 auto;
+    /* background-color: #797878; */
+    text-align: center;
 }
 .contnet h1
 {
     color: #fff;
     font-size: 60px;
     text-transform: capitalize;
-    /* color: #fff; */
+    text-align: center;
 }
 
 .contnet p
 {
     font-size: 20px;
-    color: #fff;
+    color: #cdcccc;
     text-transform: capitalize;
     max-width: 44%;
-    letter-spacing: 1.5px;
+    letter-spacing: 1.3px;
+    text-align: center;
+    margin: 10px auto;
+    margin-bottom: 20px;
 }
 .content .btn_ss
 {
     width: 200px;
     font-size: 20px;
+    padding: 10px 20px;
     text-transform: capitalize;
     background-color:#000;
     color: #fff;
@@ -261,10 +122,6 @@ ul li
     -ms-transition: 0.4s;
     -o-transition: 0.4s;
 }
-/* .btn:hover
-{
-    letter-spacing: 0.04px;
-} */
 @media  (max-width:768px)
 {
     .contnet h1
