--- a/style.css
+++ b/style.css
@@ -55,9 +55,9 @@ body
     -ms-transition: .5s;
     -o-transition: .5s;
 }
- .logo h3:hover
+ .logo:hover
 {
-   color: #797878;
+   color: #bcbcbc;
 }
 
 .navbar
@@ -65,12 +65,14 @@ body
     position: fixed;
     width: 100%;
     z-index: 6767;
-    /* background-color: #c6c4c4; */
 }
 .nav-link
 {
     margin-left: 25px;
 }
+nav.scrolled {
+    background-color:#333; /* Change this to the desired background color */
+  }
 .navbar-toggler
 {
     background-color: rgb(192, 190, 190);
@@ -124,7 +126,7 @@ body
 {
     .navbar
     {
-        background-color: #797878;
+        background-color: #333;
     }
 }
 /* main section  *******************************************/
@@ -280,8 +282,12 @@ letter-spacing: 1px;
     width: 100%;
     height: 150px;
     border-radius: 8px;
-    /* overflow: hidden; */
-    transition: all .5s ease-in-out;
+    /*overflow: hidden;
+    */transition: all .5s ease-in-out;
+    -webkit-transition: all .5s ease-in-out;
+    -moz-transition: all .5s ease-in-out;
+    -ms-transition: all .5s ease-in-out;
+    -o-transition: all .5s ease-in-out;
 }
 .about img:hover
 {
